--- a/app/assets/stylesheets/fortitude/api/blocks/_box.scss
+++ b/app/assets/stylesheets/fortitude/api/blocks/_box.scss
@@ -5,7 +5,7 @@
 $fortitude-box-border-style: solid !default;
 $fortitude-box-border-width: 0 !default;
 
-$fortitude-box-border-radius--rounded: 0.2rem !default;
+$fortitude-box-border-radius--rounded: 2px !default;
 
 @mixin fortitude-box($extensions: ()) {
   $is-rounded: fortitude-contains($extensions, rounded);
